# galthran-memex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
.cursor/: environment.json
.cursor/rules/: knowledge-base.mdc
.github/workflows/: deploy-viewer.yml
knowledge/: clip-robustness-under-natural-distribution-shift.md  clip-scaling-behavior.md  clip.md  contrastive-image-text-pretraining.md  easy-ep.md  expert-pruning.md  few-shot-expert-localization.md  infonce-contrastive-objective.md  mixture-of-experts.md  moores-defense-of-common-sense.md  moores-proof-of-external-world.md  output-aware-expert-importance.md  perception-analysis-problem.md  philosophy-as-analysis.md  prompt-ensembling.md  sense-data.md  soames-philosophical-analysis.md  zero-shot-image-classification-with-text-prompts.md
server/: cli.py  config.py  cursor_client.py  github_client.py  kb.py  main.py  prompt.py  semantic.py  tools.py
viewer/: app.js  build.py  index.html  style.css
workspace/: philosophy-study-plan.md
